[package]
name = "findr"
version = "0.1.0"
edition = "2024"
authors = ["Phil Brass <pbrass@gmail.com>"]

[dependencies]
anyhow = "1"
walkdir = "2"
regex = "1"
pest = "2.8.1"
pest_derive = "2.8.1"
glob = "0.3.2"
tempfile = "3.20.0"
file-owner = "0.1"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.0.4"
pretty_assertions = "1.4.0"
rand = "0.8.5"
